# bloxide

./: .gitignore  Cargo.toml  README.md  benchmark-report.md  pyproject.toml  rustfmt.toml
examples/: anderson.toml  anderson.yaml  cold.toml
python/bloxidepy/: __init__.py  _core.pyi
src/: config.rs  lib.rs  main.rs  mixedarithmetic.rs  parameters.rs  python.rs  state.rs  viscosity.rs
