[package]
name = "bloxide"
version = "0.1.0"
edition = "2024"

[lib]
name = "bloxide"
crate-type = ["cdylib", "rlib"]

[features]
# Enabled by maturin (see pyproject.toml). Kept off by default so
# `cargo test`/`cargo run` still link against a normal libpython-free build.
python = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
libm = "0.2.15"
num-traits = "0.2"
num-complex = "0.4"
num-dual = "0.14.1"
derive_more = { version = "2.1.1", features = ["add", "mul", "not"] }
nalgebra = "0.35.0"
pyo3 = { version = "0.29.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"
thiserror = "2.0.18"
